# manga-tools

./: .pylintrc  README-zh.md  README.md  README_zh-CN.md  package.oo.yaml  pyproject.toml
epub/: main.template.opf
epub/content/: contents.template.ncx  main.template.opf
epub/content/pages/: page.template.html
epub/css/: style.css
flows/flow-1/: .flow.ui.oo.json  flow.oo.yaml
oo-locales/: en.json  zh-CN.json
shared/: archive.py  compress.py  pdf.py  utils.py
shared/epub/: __init__.py  extraction.py  generation.py  image.py  namespace.py  utils.py  xml.py  xml_writer.py
subflows/archive_directory/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/archive_directory/scriptlets/: +scriptlet#1.py
subflows/transform/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/transform/scriptlets/: +scriptlet#1.py
subflows/unarchive2images/: .subflow.ui.oo.json  subflow.oo.yaml
tasks/archive/: __init__.py  task.oo.yaml
tasks/pack/: __init__.py  task.oo.yaml
tasks/unarchive/: __init__.py  task.oo.yaml
