[project]
name = "manga-tools"
version = "0.1.0"
description = ""
authors = [
    {name = "TaoZeyu",email = "i@taozeyu.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "rarfile (>=4.2,<5.0)"
]

[tool.poetry]
package-mode = false
packages = [{include = "manga_tools", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
